--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-datatables": "^5.0.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
+    "datatables.net": "^1.10.16",
+    "datatables.net-dt": "^1.10.16",
     "express": "^4.16.2",
+    "jquery": "^3.3.1",
     "mongoose": "^5.0.7",
     "morgan": "^1.9.0",
     "rxjs": "^5.5.6",
@@ -35,8 +39,10 @@
     "@angular/cli": "~1.7.0",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
+    "@types/datatables.net": "^1.10.8",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.3.0",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
