--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
     "experimentalDecorators": true,
     "target": "es5",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2017", "dom"]
+    "lib": ["es2017", "dom"],
+    "paths": {
+      "@angular/*": ["../node_modules/@angular/*"]
+    }
   }
 }
